<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grid_order_total"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:useDefaultMargins="true"
    android:columnCount="2"
    android:rowCount="3">

    <TextView
        android:id="@+id/text_view_order_quantity_label"
        style="?attr/textAppearanceCaption"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/order_quantity_label"
        android:textColor="@color/color_black_60" />

    <TextView
        android:id="@+id/text_view_order_quantity"
        style="?attr/textAppearanceCaption"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="end"
        android:text="@string/order_quantity_value_label"
        android:textColor="@color/color_black_87" />

    <TextView
        android:id="@+id/text_view_order_total_discount_label"
        style="?attr/textAppearanceCaption"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/order_total_discount_label"
        android:textColor="@color/color_black_60" />

    <TextView
        android:id="@+id/text_view_order_total_discount"
        style="?attr/textAppearanceCaption"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="end"
        android:text="@string/order_total_discount_value_label"
        android:textColor="@color/color_black_87" />

    <TextView
        android:id="@+id/text_view_order_total_price_label"
        style="?attr/textAppearanceCaption"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/order_total_price_label"
        android:textColor="@color/color_black_60" />

    <TextView
        android:id="@+id/text_view_order_total_price"
        style="?attr/textAppearanceCaption"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="end"
        android:text="@string/order_total_price_value_label"
        android:textColor="?attr/colorPrimary" />

</GridLayout>