<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16"
    android:elevation="@dimen/dp_4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_12"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_view_ordered"
            android:layout_width="@dimen/dp_64"
            android:layout_height="@dimen/dp_64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/CornerRounded.Image16"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12">

            <TextView
                android:id="@+id/text_view_ordered_title"
                style="?attr/textAppearanceBody1"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:text="@string/ordered_title_label"
                android:textColor="@color/color_black_87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_ordered_color_label"
                style="?attr/textAppearanceCaption"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/ordered_color_label"
                android:textColor="@color/color_black_60"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_title" />

            <TextView
                android:id="@+id/text_view_ordered_color"
                style="?attr/textAppearanceCaption"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/ordered_color_value_label"
                android:textColor="@color/color_black_87"
                app:layout_constraintStart_toEndOf="@id/text_view_ordered_color_label"
                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_title" />

            <TextView
                android:id="@+id/text_view_ordered_size_label"
                style="?attr/textAppearanceCaption"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/ordered_size_label"
                android:textColor="@color/color_black_60"
                app:layout_constraintStart_toEndOf="@id/text_view_ordered_color"
                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_title" />

            <TextView
                android:id="@+id/text_view_ordered_size"
                style="?attr/textAppearanceCaption"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/ordered_size_value_label"
                android:textColor="@color/color_black_87"
                app:layout_constraintStart_toEndOf="@id/text_view_ordered_size_label"
                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_title" />

            <TextView
                android:id="@+id/text_view_ordered_price"
                style="?attr/textAppearanceBody2"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/ordered_price_label"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_color_label" />

            <TextView
                android:id="@+id/text_view_ordered_price_discount"
                style="?attr/textAppearanceBody2"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/ordered_price_discount_label"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/text_view_ordered_price"
                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_color_label" />

            <TextView
                android:id="@+id/text_view_ordered_discount"
                style="?attr/textAppearanceBody2"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/ordered_discount_label"
                android:textColor="@color/color_black_54"
                app:layout_constraintStart_toEndOf="@id/text_view_ordered_price_discount"
                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_color_label" />

            <include
                layout="@layout/layout_order_total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_price"
                app:layout_constraintBottom_toTopOf="@id/button_order_again_ordered"
                />

            <Button
                android:id="@+id/button_order_again_ordered"
                style="?attr/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@string/order_again_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/grid_order_total" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>