<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_16">

        <TextView
            android:id="@+id/text_view_chat_name"
            style="@style/TextAppearance.TailorMade.Body1.BlackHigh"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/text_view_chat_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/chat_name_label" />

        <TextView
            android:id="@+id/text_view_chat_content"
            style="@style/TextAppearance.TailorMade.Body2.BlackMedium"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:maxLines="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_chat_name"
            tools:text="@string/chat_content_label" />

        <TextView
            android:id="@+id/text_view_chat_time"
            style="@style/TextAppearance.TailorMade.Overline.BlackLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/chat_time_label" />

        <include
            android:id="@+id/layout_badge"
            android:layout_width="@dimen/dp_8"
            android:layout_height="@dimen/dp_8"
            android:visibility="gone"
            layout="@layout/layout_badge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_chat_time"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>